  * [powerpc*] udeb: Add i2c-modules, mmc-core-modules, nic-wireless-modules
  * [arm64,armhf] udeb: Add mmc-core-modules to Provides of kernel-image
  * udeb: Add fb-modules and include drm and drm_kms_helper on most
    architecures
  * udeb: Move basic PV modules from {hyperv,virtio}-modules to kernel-image
  * udeb: Move drivers from {hyperv,virtio}-modules to
    {fb,input,nic,scsi}-modules

  [ Wookey ]
  * linux-perf: Enable coresight trace (libopencsd) support in perf
    (Closes: #895131)

  [ Vagrant Cascadian ]
  * [armhf] Add patch from upstream fixing stability issues when cpufreq
    is enabled on Orange Pi Plus.
  * [armhf] Enable REGULATOR_SY8106A as module.
  * [arm64] Add patch working around A64 timer issues.

  [ dann frazier ]
  * arm64: lockdown: Move init_lockdown() call after uefi_init()

  [ Salvatore Bonaccorso ]
  * Btrfs: fix corruption reading shared and compressed extents after hole
    punching (Closes: #922306)

  [ Vagrant Cascadian ]
  * [arm64] Add patch from v4.20 to enable device-tree for Pine64-LTS.

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 12 Feb 2019 12:49:10 +0000

linux (4.19.20-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.19.17
    - tty/ldsem: Wake up readers after timed out down_write()
    - tty: Hold tty_ldisc_lock() during tty_reopen()
    - tty: Simplify tty->count math in tty_reopen()
    - tty: Don't hold ldisc lock in tty_reopen() if ldisc present
    - can: gw: ensure DLC boundaries after CAN frame modification
      (CVE-2019-3701)
    - netfilter: nf_conncount: don't skip eviction when age is negative
    - netfilter: nf_conncount: split gc in two phases
    - netfilter: nf_conncount: restart search when nodes have been erased
      (Closes: #921616)
    - netfilter: nf_conncount: merge lookup and add functions
    - netfilter: nf_conncount: move all list iterations under spinlock