@@ -14,6 +14,7 @@ linux (4.19.20-2) UNRELEASED; urgency=medium
   * udeb: Move basic PV modules from {hyperv,virtio}-modules to kernel-image
   * udeb: Move drivers from {hyperv,virtio}-modules to
     {fb,input,nic,scsi}-modules
+  * debian/bin/gencontrol.py: Add rules to build debian/build/config.*
 
   [ Wookey ]
   * linux-perf: Enable coresight trace (libopencsd) support in perf
